# document-auditing-compliance

./: Dockerfile  README.md  asgi.py  baseline_agent.py  baseline_scores.json  design.md  env.py  generator.py  grader1.py  grader2.py  grader3.py  inference.py  main.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  rewardScorer.js  reward_scorer.py  rewards.py  run_baseline.py  task1_fields.py  task2_invoice.py  task3_policy.py
app/: baseline_agent.py  curriculum.py  env.py  main.py
app/agents/: verifier.py
app/documents/: generator.py
app/graders/: grader1.py  grader2.py  grader3.py  score_transform.py  verifier_grader.py
app/tasks/: task1_fields.py  task2_invoice.py  task3_policy.py
openenv_compliance.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
server/: app.py
static/: index.html  swagger-ui-custom.html
tests/: test_action_validation.py  test_seed_propagation.py
