[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-compliance"
version = "1.0.0"
description = "Document Compliance Auditing environment for OpenEnv"
requires-python = ">=3.12,<3.13"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "pydantic>=2.9.2",
    "python-multipart>=0.0.12",
    "openai>=2.7.2",
    "requests>=2.32.3",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["app", "app.tasks", "app.graders", "app.documents", "baseline", "server"]
